k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fabflix-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fabflix-app
  template:
    metadata:
      labels:
        app: fabflix-app
    spec:
      containers:
      - name: fabflix-app
        image: fabflix-app:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  type: LoadBalancer
  selector:
    app: fabflix-app
  ports:
  - port: 80
    targetPort: 8080
