k8s/db-replica.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: fabflix-db-replica
spec:
  serviceName: "db-replica"
  replicas: 1
  selector:
    matchLabels:
      app: fabflix-db
      role: replica
  template:
    metadata:
      labels:
        app: fabflix-db
        role: replica
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        command: ["postgres"]
        args: ["-c", "hot_standby=on"]
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: db-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: db-replica
spec:
  selector:
    app: fabflix-db
    role: replica
  ports:
  - port: 5432
    targetPort: 5432
